# anki_assist

./: .gitignore  README.md  pyproject.toml  requirements.txt
.specify/memory/: constitution.md
anki/: exporter.py  templates.py
app/: streamlit_app.py
exports/: Law-Notes-20250811-1552.apkg  Law-Notes-20250811-1608.apkg  Law-Notes-20250811-1612.apkg  Law-Notes-20250831-1615.apkg  Law-Notes-20250915-0812.apkg  Law-Notes-20250918-1506.apkg  Law-Notes-20251128-2336.apkg  Law-Notes-20251129-0029.apkg  Law-Notes-20251129-0035.apkg  Law-Notes-20251129-0041.apkg
llm/: client.py
models/: schemas.py
pipeline/: graph.py
pipeline/nodes/: extract.py  generate_cards.py  induction.py  ingest.py  items_from_text.py  normalize.py  quality.py
pipeline/utils/: json_utils.py
specs/: 001-pipeline-optimization.md
specs/001-pipeline-optimization/: data-model.md  implementation-guide.md  implementation-plan.md  quickstart.md  tasks.md
specs/001-pipeline-optimization/checklists/: requirements.md
specs/001-pipeline-optimization/contracts/: api-contracts.md
